--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^3.4.4",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -37,8 +41,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.37",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
+    "react-router-dom": "^6.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
