--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "react-router-dom": "^6.0.2",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
