--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2"
 django-rest-framework = "^0.1.0"
 django-rest-authemail = "^2.1.1"
 django-cors-headers = "^3.10.1"
+drfpasswordless = "^1.5.7"
 
 [tool.poetry.dev-dependencies]
 
