--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2"
 django-rest-framework = "^0.1.0"
 django-cors-headers = "^3.10.1"
 drfpasswordless = "^1.5.7"
+drf-nested-routers = "^0.93.4"
 
 [tool.poetry.dev-dependencies]
 
