--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.12",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "dateformat": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.0",
     "@types/react": "^17.0.37",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
