--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.9.0",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +17,8 @@
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^3.4.4",
+    "styled-components": "^5.3.3",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
@@ -46,6 +49,7 @@
   "devDependencies": {
     "@types/dateformat": "^5.0.0",
     "@types/react": "^17.0.37",
+    "@types/styled-components": "^5.1.19",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "react-router-dom": "^6.1.1",
