--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^5.9.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
@@ -16,16 +13,16 @@
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^3.4.4",
-    "styled-components": "^5.3.3",
+    "react-scripts": "^5.0.0",
+    "react-router-dom": "^6.1.1",
     "twin.macro": "^2.8.2",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,11 +46,8 @@
   "devDependencies": {
     "@types/dateformat": "^5.0.0",
     "@types/react": "^17.0.37",
-    "@types/styled-components": "^5.1.19",
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "react-router-dom": "^6.1.1",
-    "react-test-renderer": "^17.0.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.12"
   }
 }
