--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "dateformat": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
+    "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
     "react-router-dom": "^6.1.1",
+    "react-scripts": "^5.0.0",
     "twin.macro": "^2.8.2",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
