--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_API_URL=https://clydemc.org:8000/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
