--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -12,6 +12,7 @@ django-cors-headers = "^3.10.1"
 drfpasswordless = "^1.5.7"
 Pillow = "^9.0.0"
 django-resized = "^0.3.11"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 
