--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -13,6 +13,7 @@ drfpasswordless = "^1.5.7"
 Pillow = "^9.0.0"
 django-resized = "^0.3.11"
 psycopg2-binary = "^2.9.3"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
