--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -14,6 +14,7 @@ Pillow = "^9.0.0"
 django-resized = "^0.3.11"
 psycopg2-binary = "^2.9.3"
 gunicorn = "^20.1.0"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 
