--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -15,6 +15,7 @@ django-resized = "^0.3.11"
 psycopg2-binary = "^2.9.3"
 gunicorn = "^20.1.0"
 python-dotenv = "^0.19.2"
+django-anymail = {extras = ["mailgun"], version = "^8.4"}
 
 [tool.poetry.dev-dependencies]
 
