--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Mark Waddoups <mwaddoups@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.8, <4"
 Django = "^3.2"
 django-rest-framework = "^0.1.0"
 django-cors-headers = "^3.10.1"
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.9.3"
 gunicorn = "^20.1.0"
 python-dotenv = "^0.19.2"
 django-anymail = {extras = ["mailgun"], version = "^8.4"}
+urllib3 = "^1.26.8"
 
 [tool.poetry.dev-dependencies]
 
