--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^5.0.0",
     "twin.macro": "^2.8.2",
     "typescript": "^4.5.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
