--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dateformat": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
+    "react-cookie-consent": "^7.2.1",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
