--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-cookie-consent": "^7.2.1",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
     "twin.macro": "^2.8.2",
