--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.7.2",
     "react-cookie-consent": "^7.2.1",
+    "react-datetime-picker": "^3.5.0",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/dateformat": "^5.0.0",
     "@types/react": "^17.0.37",
+    "@types/react-datetime-picker": "^3.4.1",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.12"
