--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-ga4": "^1.4.1",
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
