--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-ga4": "^1.4.1",
+    "react-intersection-observer": "^9.5.3",
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.1",
