--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -12,11 +12,11 @@ django-cors-headers = "^3.10.1"
 drfpasswordless = "^1.5.7"
 Pillow = "^9.0.0"
 django-resized = "^0.3.11"
-psycopg2-binary = "^2.9.3"
 gunicorn = "^20.1.0"
 python-dotenv = "^0.19.2"
 django-anymail = {extras = ["mailgun"], version = "^8.4"}
 urllib3 = "^1.26.8"
+stripe = "^7.13.0"
 
 [tool.poetry.dev-dependencies]
 
