--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^0.19.2"
 django-anymail = {extras = ["mailgun"], version = "^8.4"}
 urllib3 = "^1.26.8"
 stripe = "^7.13.0"
+discord-py = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 
