--- a/mountains/pyproject.toml
+++ b/mountains/pyproject.toml
@@ -18,6 +18,7 @@ django-anymail = {extras = ["mailgun"], version = "^8.4"}
 urllib3 = "^1.26.8"
 stripe = "^7.13.0"
 discord-py = "^2.3.2"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 
